2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sound-juicer.h:
	* src/sj-main:
	Add sj_window_set_title().

	* src/sj-play.c:
	Use set_title() albeit in a crap manner, and show errors in a crap
	manner.

2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (setup):
	  Set device.

2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (cb_hop_track):
	  Cast fix.

2005-06-23  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/Makefile.am:
	* src/sj-main.c:
	* src/sj-play.[ch]:
	Committed first attempt at CD PLAYING.

2005-06-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in:
	  Add AC_PROG_LIBTOOL, thus now using libtool and thus allowing to
	  build against uninstalled dependencies.

2005-06-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Also fix the folder creation check.

2005-06-22  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix the overwrite check.

2005-06-22  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.2.

2005-06-22  Ross Burton  <ross@burtonini.com>

	The Great Gnome-Vfs Port.

	* data/sound-juicer.glade:
	Manually add the file system backend property to the file selector.

	* data/sound-juicer.schemas.in:
	Add base_uri and deprecate base_path.
	
	* src/sj-extractor.[ch]:
	Use gnomevfssink instead of filesink.

	* src/sj-extracting.c:
	* src/sj-main.c:
	* src/sj-prefs.c:
	* src/sound-juicer.h:
	base_path is dead, long live base_uri.

	* src/sj-util.[ch]:
	Replace mkdir_recursive with make_directory_with_parents_for_uri
	from gnome-vfs.

2005-06-22  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add hidden for now Edit Profiles button.

	* src/sj-prefs.c:
	Connect to button, display editor. Crashes, which is why the
	button is hidden.

2005-05-17  Jayaradha  <njayaradha@yahoo.com>

	* ta.po: Added tamil

2005-06-12  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
